2002-11-27 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * python/demo/*.py load.py extracted from test.py. Added explore.py
        that only displays required tags and testAll.py that parses all
        the files of the testsuite without using unittest.
      * python/testSuite.py other additional test on new files added.
      * Data/* new test files added accordingly to the testSuite.
      * src/gdcmHeader.cxx avoid overwriting of the dictionary when
        the vr in the file differs from the one of the dictionary.

2002-11-20 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcm.h and gdcmHeader.cxx gdcm no longer loads all the elements
        values, but limits itself to values which are below a user specified
        size (by default 1024 bytes).
      * python/gdcm.i : elements not loaded (because their size is above the
        user specified treshold) are exported with their TagKey as key of the
        python dictionary. This enables the testsuite to make some checks
        on the unloaded elements (since we have their offset and size).
      * python/testSuite.py
        - now tests for the existence and proper value of the pixel data
        - two new examples added.
      * Data/gdcm-MR-SIEMENS-16.acr[12] added.

2002-11-18 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcm.h and gdcmHeader.cxx are now "Big Endian transfer syntax"
        aware. See the strategy comments in gdcmHeader::FindeLength().
      * Test/test.cxx now accepts a filename as first argument.
      * Data/US-PAL-8-10x-echo.dcm and US-RGB-8-epicard.dcm added.
      * python/testSuite.py changed to integrate test on above files.

2002-11-15 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Dicts/dicomV3.dic removed all the trailing (RET) when the
        the vr was also RET.
      * python/testSuite.py more tests added.

2002-11-14 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * python/testSuite.py unittest test suite added (uses Data)